# mcp-composio-wrapper

./: .env.template  .gitignore  README.md  pyproject.toml
mcp_composio/: mcp_tools_for_opencode.py
