[tool.poetry]
name = "mcp-composio"
version = "0.1.0"
description = ""
authors = ["SNAndreatta <santinoandreatta@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
composio = "^0.11.3"
fastmcp = "^3.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
